--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sass": "^1.59.2"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.3"
+    "@parcel/packager-raw-url": "^2.8.3",
+    "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-webmanifest": "^2.8.3"
   }
 }
